<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins"
            android:text="@string/edit_note"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="381dp"
            android:layout_height="68dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="40dp"
            android:background="@drawable/orangeborder"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="367dp"
            android:layout_height="485dp"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="40dp"
            android:background="@drawable/orangeborder"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_above="@+id/editNoteTitle"
            android:layout_alignEnd="@+id/editNoteHeading"
            android:layout_marginEnd="-244dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:contentDescription="@string/editfab"
            android:src="@drawable/baseline_done_24"
            android:tintMode="@color/white" />
    </RelativeLayout>
</layout>