<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins"
            android:text="@string/add_note"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="365dp"
            android:layout_height="67dp"
            android:layout_below="@id/addNoteHeading"
            android:layout_marginTop="40dp"
            android:background="@drawable/orangeborder"
            android:fontFamily="@font/poppins"
            android:hint="@string/addNoteTitle"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addNoteDesc"
            android:layout_width="363dp"
            android:layout_height="425dp"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="40dp"
            android:background="@drawable/orangeborder"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/noteData"
            android:padding="12dp"
            android:textSize="18sp" />

    </RelativeLayout>
</layout>